# satingest

./: .gitignore  CMakeLists.txt  README.md  Release_Notes.txt  build.sh
TRIGGERS/: JISATINGEST.DEVELOP.WC2_NCO  JISATINGEST_trig_IASI  JISATINGEST_trig_OMPS  JISATINGEST_trig_general  JISATINGEST_trig_test  lsf.JISATINGEST.DEVELOP.WC2_NCO  lsf.JISATINGEST_trig_IASI  lsf.JISATINGEST_trig_OMPS  lsf.JISATINGEST_trig_general
docs/: CMakeLists.txt  README.md  Release_Notes.txt
ecflow/: CMakeLists.txt  prod_satingest.def  satingest.ecf
fix/: CMakeLists.txt  aerosol  aerosol.af_viirs  aerosol.avhrr_weekly_gvf  aerosol.burned_area  aerosol.burning_emissions  aerosol.dust  aerosol.hms_smoke_final  aerosol.hms_smoke_prelim  aerosol.hms_smoke_prelim_early  aerosol.modis_aod  aerosol.modis_fire  aerosol.nic_lks  aerosol.sat_comp_mosaic_imgry  aerosol.viirs_weekly_gvf  aerosol.wf_abba  airs  airs.airs_efov  airs.amsr2  airs.iasi_efov  airs.mt_saphir  avhrr  avhrr.avhrr_18_19  avhrr.avhrr_m1_m2_m3  bufr_V10satwind.4qual.bufrtable  bufr_amsua15_ta2tb.txt  bufr_amsua16_ta2tb.txt  bufr_goes.cloud.bufrtable  bufr_goes.imgrdn.bufrtable  bufr_goes.sounding_1x1.bufrtable  bufr_ompstc.bufrtable  bufr_ompstc.bufrtable.no_corners  bufrtab.003  bufrtab.005  bufrtab.008  bufrtab.012  bufrtab.021  bufrtab.GOES16ASR_NESDIS  bufrtab.GOES16CSR_NESDIS  bufrtab_saphir_foreign  (+79 more)
jobs/: CMakeLists.txt  JISATINGEST
modulefiles/: satingest_common.lua  satingest_hera.lua  satingest_orion.lua  satingest_wcoss2.lua
release_notes/: Release_Notes.txt
scripts/: CMakeLists.txt  existday.sh  existore.sh
sorc/: CMakeLists.txt  build.sh  dumpjb.build.sh  install.sh  load_libs.rc
sorc/bufr_cycsplit.fd/: CMakeLists.txt  cycsplit.f  makefile
sorc/bufr_readmp.fd/: CMakeLists.txt  temp_readmp.f90
sorc/bufr_tranamsua.fd/: CMakeLists.txt  makefile  tranamsua.f
sorc/bufr_tranavhrr.fd/: CMakeLists.txt  avhrr.f90  makefile  tranavhrr.f90
sorc/bufr_trancimssamv.fd/: CMakeLists.txt  bufrtab005_temp  trancimssamv.f90
sorc/bufr_trangoescld.fd/: CMakeLists.txt  makefile  trangoescld.f
sorc/bufr_trangoessst.fd/: CMakeLists.txt  makefile  trangoessst.f
sorc/bufr_tranhirs3.fd/: CMakeLists.txt  bufr1b.f  makefile  rfac.inc  tranhirs3.f
sorc/bufr_tranimgr.fd/: CMakeLists.txt  makefile  tranimgr.f  tranimgr.f90
sorc/bufr_tranmhs.fd/: CMakeLists.txt  bufr1b.f  makefile  tranmhs.f
sorc/bufr_tranmls.fd/: CMakeLists.txt  makefile  o3mr_datasets.f90  tranmls.f90
sorc/bufr_tranmrms.fd/: CMakeLists.txt  tranmrms.f90
sorc/bufr_tranmtypsbt.fd/: CMakeLists.txt  makefile  tranmtypsbt.f
sorc/bufr_tranomi.fd/: CMakeLists.txt  makefile  to3_datasets.f90  tranomi.f90
sorc/bufr_tranompstc.fd/: CMakeLists.txt  makefile  tranompstc.f
sorc/bufr_tranpoessst.fd/: CMakeLists.txt  makefile  tranpoessst.f
sorc/bufr_tranpoessst_navo.fd/: CMakeLists.txt  makefile  tranpoessst_navo.f
sorc/bufr_transaphir.fd/: CMakeLists.txt  makefile  transaphir.f90
sorc/bufr_transatw.fd/: CMakeLists.txt  makefile  transatw.f
sorc/bufr_transkycovr.fd/: CMakeLists.txt  makefile  transkycovr.f90
sorc/bufr_transsmi.fd/: CMakeLists.txt  makefile  transsmi.f
sorc/bufr_transsnd.fd/: CMakeLists.txt  makefile  transsnd.f
sorc/bufr_tranwindsat.fd/: CMakeLists.txt  makefile  tranwindsat.f
sorc/snow_sno16grb.fd/: CMakeLists.txt  makefile  sno16grb.f
sorc/snow_sno8grb.fd/: CMakeLists.txt  makefile  sno8grb.f
sorc/snow_sno96grb.fd/: CMakeLists.txt  makefile  sno96grb.f
sorc/temp_readmp.fd/: CMakeLists.txt
ush/: CMakeLists.txt  build.sh  download_fix.sh  ingest_check_lapsed_data.sh  ingest_copy.sh  ingest_copytotarget.sh  ingest_get.sh  ingest_process_days.sh  ingest_process_onetype_newdays.sh  ingest_process_onetype_neworbits.sh  ingest_process_orbits.sh  ingest_process_orbits_subscript.sh  ingest_qmgr.sh  ingest_query.sh  ingest_script_atovs1b.sh  ingest_script_mls.sh  ingest_script_omi.sh  ingest_sncvgrib.sh  ingest_sncvgrib96.sh  ingest_snodepgr.sh  ingest_translate_orbits.sh  ingest_transst_poes.sh  ingest_transst_poes_navo.sh  navo_poes_sst_bundle.sh
versions/: build.ver  run.ver
